--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <h1>Cat In House</h1>
     <p>Vihaan's Personal Blog</p>
     
-    1. Hauz Khas Fort
+    1. <a url="HauzKhasFort.html">Hauz Khas Fort</a>
   </body>
 </html>
