--- a/HauzKhasFort.html
+++ b/HauzKhasFort.html
@@ -5,5 +5,21 @@
   <body>
     <h1>Hauz Khas Fort</h1>
 
+<p>
+  Hi, my name is Vihaan Gupta. This May, we went to the Hauz Khas fort as part of my research.
+</p>
+
+It is situated in South Delhi near IIT. We took a ticket and entered the Hauz Khas fort, the fee of the fort is 25 rupees for Indian people and for foreigners was 300 rupees.There are many buildings inside the fort a Mosque, Three-Domed Building, Madarsa (College) and Firoz Shah Tomb.
+
+This fort was built by two kings Aluddin Khilji and Firoz Shah Tulak. Aluddin Khilji built Three-Domed building, mosque and excavated the water tank which is now Hauz Khas lake. It was made for people who lived in Hauz Khas village and Siri fort. Firoz Shah Tuglak built a Madras and his own tomb.  
+        
+The weather was cloudy so we were enjoying the tour. Inside the fort there is a mosque. People staying in Madarsa used to worship there. Madarsa was a collage inside the fort, it was divided into two parts western and northern wings. From the northern wing of Madarsa there is a beautiful view of the lake, and on the other side of the rooms there was a garden where students used to do flowering and fruiting trees and bushes. Three-Domed building is an unusual building, some believe that these are graves, but we do not find evidence of graves, from the size of shape some believe that it would have been a meeting place or an assembly room.     
+
+The lake is adjacent to it but it has a separate entrance and you don’t need a ticket for it. We walked for about 10 min. through the shops and restaurants to reach the lake. The view of the lake was amazing. There were many trees around it. From far away, the trees and water made a gorgeous view. But, the water was very dirty. We found that on some trees near the bank of the lake many bats were hanging upside down on the trees. 
+
+We went to a cafe and had our dinner. I ate a burger with some french fries. Our restaurant was facing the lake. As the sun set, thousands of bats were flying in the air. It was so cool. 
+
+
+
 </body>
 </html>
