--- a/HauzKhasFort.html
+++ b/HauzKhasFort.html
@@ -2,6 +2,26 @@
 
 <head>
   <title>Cat In House</title>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&family=Poppins&display=swap');
+    /* @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap'); */
+    /* @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap'); */
+    body {
+      margin: 20 auto;
+      /* background-color: #DDDDDD; */
+      background-color: #303030;
+      color: white;
+      max-width: 800px;
+      font-size: larger;
+      /* font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif */
+      font-family: 'Poppins', sans-serif;
+      /* line-height: 130%; */
+    }
+    h1 {
+      font-family: 'Cherry Bomb One', cursive;
+      font-size: 4em;
+    }
+  </style>
 </head>
 
 <body>
@@ -12,9 +32,9 @@
   </p>
 
   <p>
-    It is situated in South Delhi near IIT. We took a ticket and entered the Hauz Khas fort, the fee of the fort is 25
-    rupees for Indian people and for foreigners was 300 rupees.There are many buildings inside the fort a Mosque,
-    Three-Domed Building, Madarsa (College) and Firoz Shah Tomb.
+      It is situated in South Delhi near IIT. We took a ticket and entered the Hauz Khas fort, the fee of the fort is 25
+      rupees for Indian people and for foreigners was 300 rupees.There are many buildings inside the fort a Mosque,
+      Three-Domed Building, Madarsa (College) and Firoz Shah Tomb.
   </p>
   <p>
     This fort was built by two kings Aluddin Khilji and Firoz Shah Tulak. Aluddin Khilji built Three-Domed building,
