--- a/index.html
+++ b/index.html
@@ -1,11 +1,29 @@
 <html>
-  <head>
-    <title>Cat In House</title>
-  </head>
-  <body>
-    <h1>Cat In House</h1>
-    <p>Vihaan's Personal Blog</p>
-    
-    1. <a href="HauzKhasFort">Hauz Khas Fort</a>
-  </body>
+
+<head>
+  <title>Cat In House</title>
+  <link rel="stylesheet" href="main.css">
+
+  <style>
+    h1 {
+      font-family: 'Cherry Bomb One', cursive;
+      /* color: teal; */
+      font-size: 4em;
+      letter-spacing: .8rem;
+    }
+
+    a {
+      color: cornflowerblue;
+      text-decoration: none;
+    }
+  </style>
+</head>
+
+<body>
+  <h1>Cat In House</h1>
+  <p>Vihaan's Personal Blog</p>
+
+  1. <a href="HauzKhasFort.html">Hauz Khas Fort</a>
+</body>
+
 </html>
