--- a/HauzKhasFort.html
+++ b/HauzKhasFort.html
@@ -2,24 +2,20 @@
 
 <head>
   <title>Cat In House</title>
+  <link rel="stylesheet" href="main.css">
+
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&family=Poppins&display=swap');
-    /* @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap'); */
-    /* @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap'); */
-    body {
-      margin: 20 auto;
-      /* background-color: #DDDDDD; */
-      background-color: #303030;
-      color: white;
-      max-width: 800px;
-      font-size: larger;
-      /* font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif */
-      font-family: 'Poppins', sans-serif;
-      /* line-height: 130%; */
-    }
     h1 {
       font-family: 'Cherry Bomb One', cursive;
+      color: teal;
       font-size: 4em;
+      letter-spacing: .8rem;
+    }
+
+    figcaption {
+      color: coral;
+      font-size: small;
+      font-family: 'Courier New', Courier, monospace;
     }
   </style>
 </head>
@@ -30,17 +26,24 @@
   <p>
     Hi, my name is Vihaan Gupta. This May, we went to the Hauz Khas fort as part of my research.
   </p>
-
+  <figure>
+    <img width="800" src="img/HauzKhasFort/lake.JPG" alt="Hauz Khas Fort Tank" />
+    <figcaption>Hauz Khas Fort Tank</figcaption>
+  </figure>
   <p>
-      It is situated in South Delhi near IIT. We took a ticket and entered the Hauz Khas fort, the fee of the fort is 25
-      rupees for Indian people and for foreigners was 300 rupees.There are many buildings inside the fort a Mosque,
-      Three-Domed Building, Madarsa (College) and Firoz Shah Tomb.
+    It is situated in South Delhi near IIT. We took a ticket and entered the Hauz Khas fort, the fee of the fort is 25
+    rupees for Indian people and for foreigners was 300 rupees.There are many buildings inside the fort a Mosque,
+    Three-Domed Building, Madarsa (College) and Firoz Shah Tomb.
   </p>
   <p>
     This fort was built by two kings Aluddin Khilji and Firoz Shah Tulak. Aluddin Khilji built Three-Domed building,
     mosque and excavated the water tank which is now Hauz Khas lake. It was made for people who lived in Hauz Khas
     village
     and Siri fort. Firoz Shah Tuglak built a Madras and his own tomb.
+  <figure>
+    <img width="800" src="img/HauzKhasFort/firoz shah tomb.JPG" alt="Firoz shah tomb" />
+    <figcaption>Firoz shah tomb</figcaption>
+  </figure>
   </p>
   <p>
     The weather was cloudy so we were enjoying the tour. Inside the fort there is a mosque. People staying in Madarsa
