--- a/HauzKhasFort.html
+++ b/HauzKhasFort.html
@@ -50,10 +50,30 @@
     used
     to worship there. Madarsa was a collage inside the fort, it was divided into two parts western and northern wings.
     From the northern wing of Madarsa there is a beautiful view of the lake, and on the other side of the rooms there
-    was
-    a garden where students used to do flowering and fruiting trees and bushes. Three-Domed building is an unusual
-    building, some believe that these are graves, but we do not find evidence of graves, from the size of shape some
-    believe that it would have been a meeting place or an assembly room.
+    was a garden where students used to do flowering and fruiting trees and bushes.
+  <figure>
+    <img width="800" src="img/HauzKhasFort/MadarsaNorthWing.JPG" alt="Madarsa West Wing" />
+    <figcaption>Madarasa North Wing</figcaption>
+  </figure>
+  <figure>
+    <img width="800" src="img/HauzKhasFort/MadarsaWestWing.JPG" alt="Madarsa West Wing" />
+    <figcaption>Madarasa West Wing</figcaption>
+  </figure>
+  <figure>
+    <img width="800" src="img/HauzKhasFort/MadarsaRoom.JPG" alt="Room in Madarsa" />
+    <figcaption>Room in Madarasa </figcaption>
+  </figure>
+  <figure>
+    <img width="800" src="img/HauzKhasFort/madrsa inside.JPG" alt="Inside Madarsa" />
+    <figcaption>Inside Madarasa</figcaption>
+  </figure>
+  Three-Domed building is an unusual
+  building, some believe that these are graves, but we do not find evidence of graves, from the size of shape some
+  believe that it would have been a meeting place or an assembly room.
+  <figure>
+    <img width="800" src="img/HauzKhasFort/three-dome.JPG" alt="Three Dome" />
+    <figcaption>Three Dome Building</figcaption>
+  </figure>
   </p>
   <p>
     The lake is adjacent to it but it has a separate entrance and you don’t need a ticket for it. We walked for about 10
@@ -61,6 +81,10 @@
     around it. From far away, the trees and water made a gorgeous view. But, the water was very dirty. We found that on
     some trees near the bank of the lake many bats were hanging upside down on the trees.
   </p>
+  <figure>
+    <img width="800" src="img/HauzKhasFort/FortFromLake.JPG" alt="Fort View From Lake" />
+    <figcaption>Fort View From Lake</figcaption>
+  </figure>
   <p>
     We went to a cafe and had our dinner. I ate a burger with some french fries. Our restaurant was facing the lake. As
     the sun set, thousands of bats were flying in the air. It was so cool.
